fix spacing and color

--- a/src/components/settings-modal/account-settings/account-settings.module.css
+++ b/src/components/settings-modal/account-settings/account-settings.module.css
@@ -36,7 +36,9 @@
 }
 
 .deleteAccount {
+  margin-top: 10px;
   display: block;
+  color: red;
 }
 
 .setting .createAccount {
